--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -17,3 +17,10 @@ memmem = "0.1.1"
 async-net = "1.5.0"
 env_logger = "0.8.2"
 smol = "1.2.5"
+tokio = { version = "1.1.0", features = [
+  "rt",
+  "net",
+  "rt-multi-thread",
+  "macros"
+] }
+async-compat = "0.2.0"
