make naming orderly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ members = [
   "logger",
   "myco",
   "router",
-  "server",
+  "smol-server",
   "sessions",
   "websockets",
   "static",
-  "tokio"
+  "tokio-server"
 ]
