--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -15,5 +15,7 @@ myco-sessions = { path = "../sessions" }
 myco-websockets = { path = "../websockets" }
 myco-smol-server = { path = "../smol-server" }
 myco-static = { path = "../static" }
+myco-askama = { path = "../askama" }
 myco-errors = { path = "../errors" }
 futures-lite = "1.11.3"
+askama = "0.10.5"
