add in first-class aws lambda support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,24 @@
 [workspace]
 members = [
   "askama",
-  "http",
   "async-std-server",
+  "aws-lambda",
+  "aws-lambda-example",
   "basic-auth",
-  "errors",
   "cookies",
+  "errors",
   "example",
+  "http",
   "http-types",
   "logger",
   "myco",
+  "openssl",
   "router",
-  "smol-server",
-  "sessions",
-  "websockets",
-  "static",
-  "tokio-server",
-  "tera",
   "rustls",
-  "openssl"
+  "sessions",
+  "smol-server",
+  "static",
+  "tera",
+  "tokio-server",
+  "websockets",
 ]
