--- a/async-std-server/Cargo.toml
+++ b/async-std-server/Cargo.toml
@@ -9,6 +9,7 @@ log = "0.4.13"
 myco = { path = "../myco" }
 async-std = "1.9.0"
 myco-http = { path = "../http" }
+myco-server-common = { path = "../server-common" }
 
 [dependencies.http-types]
 path = "../http-types"
