--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -12,6 +12,7 @@ myco-http = { path = "../http" }
 log = "0.4.13"
 async-tls = "0.11.0"
 rustls = "0.19.0"
+myco-server-common = { path = "../server-common" }
 
 [dev-dependencies]
 env_logger = "0.8.2"
