--- a/server-common/Cargo.toml
+++ b/server-common/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
-name = "myco-smol-server"
+name = "myco-server-common"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-async-net = "1.5.0"
 myco = { path = "../myco" }
-smol = "1.2.5"
 myco-http = { path = "../http" }
-log = "0.4.13"
-myco-server-common = { path = "../server-common" }
+log = "0.4.14"
