--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -5,14 +5,12 @@ authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 
 [dependencies]
-async-net = "1.5.0"
-myco = { path = "../myco" }
-smol = "1.2.5"
-myco-http = { path = "../http" }
 log = "0.4.13"
-async-tls = "0.11.0"
 rustls = "0.19.0"
-myco-server-common = { path = "../server-common" }
+async-tls = "0.11.0"
+myco-tls-common = { path = "../tls-common" }
 
 [dev-dependencies]
+myco = { path = "../myco" }
+myco-smol-server = { path = "../smol-server" }
 env_logger = "0.8.2"
