--- a/tokio-server/Cargo.toml
+++ b/tokio-server/Cargo.toml
@@ -11,3 +11,6 @@ log = "0.4.13"
 tokio = { version = "1.1.0", features = ["rt", "net", "rt-multi-thread"] }
 async-compat = "0.2.0"
 myco-server-common = { path = "../server-common" }
+
+[dev-dependencies]
+env_logger = "0.8.2"
