--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -5,13 +5,17 @@ edition = "2018"
 
 [dependencies]
 httparse = "1.3.4"
-http-types = { path = "../http-types", default-features = false }
 log = "0.4.13"
 pin-project = "1.0.4"
 thiserror = "1.0.23"
 futures-lite = "1.11.3"
 async-lock = "2.3.0"
 memmem = "0.1.1"
+
+[dependencies.http-types]
+git = "https://github.com/jbr/http-types"
+branch = "myco"
+default-features = false
 
 [dev-dependencies]
 async-net = "1.5.0"
