--- a/aws-lambda/Cargo.toml
+++ b/aws-lambda/Cargo.toml
@@ -6,15 +6,13 @@ edition = "2018"
 
 [dependencies]
 myco = { path = "../myco" }
-myco-tokio-server = { path = "../tokio-server" }
 log = "0.4.13"
 tokio = { version = "1.1.0", features = ["rt", "net", "rt-multi-thread"] }
 async-compat = "0.2.0"
 myco-http = { path = "../http" }
-lamedh_runtime = { path = "../../aws-lambda-rust-runtime/lambda" }
 futures-lite = "1.11.3"
 serde_json = "1.0.61"
-aws_lambda_events = "0.4.0"
 serde = "1.0.123"
 serde_derive = "1.0.123"
 base64 = "0.13.0"
+lamedh_runtime = "0.3.0"
