quick little handlebars template engine

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,19 @@ members = [
   "cookies",
   "errors",
   "example",
+  "handlebars",
   "http",
   "logger",
   "myco",
   "native-tls",
-  "tls-common",
   "router",
   "rustls",
+  "server-common",
   "sessions",
   "smol-server",
   "static",
   "tera",
+  "tls-common",
   "tokio-server",
-  "server-common",
-  "websockets",
+  "websockets"
 ]
