update handler docs and examples

--- a/cookies/Cargo.toml
+++ b/cookies/Cargo.toml
@@ -11,3 +11,7 @@ myco = { path = "../myco" }
 [dependencies.cookie]
 version = "0.14.3"
 features = ["percent-encode", "secure"]
+
+[dev-dependencies]
+env_logger = "0.8.2"
+myco-smol-server = { path = "../smol-server" }
