--- a/websockets/Cargo.toml
+++ b/websockets/Cargo.toml
@@ -15,3 +15,7 @@ serde = "1.0.120"
 serde_json = "1.0.61"
 sha-1 = "0.9.2"
 log = "0.4.13"
+
+[dev-dependencies]
+myco-smol-server = { path = "../smol-server/" }
+env_logger = "0.8.2"
