--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -15,6 +15,7 @@ memmem = "0.1.1"
 [dependencies.http-types]
 git = "https://github.com/jbr/http-types"
 branch = "myco"
+# path = "../../http-types"
 default-features = false
 
 [dev-dependencies]
