--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -22,10 +22,8 @@ default-features = false
 async-net = "1.5.0"
 env_logger = "0.8.2"
 smol = "1.2.5"
-tokio = { version = "1.1.0", features = [
-  "rt",
-  "net",
-  "rt-multi-thread",
-  "macros"
-] }
 async-compat = "0.2.0"
+
+[dev-dependencies.tokio]
+version = "1.1.0"
+features = ["rt", "net", "rt-multi-thread", "macros"]
