switch router to routefinder and add support for nested routers

--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 
 [dependencies]
-route-recognizer = "0.3.0"
+routefinder = "0.2"
 myco = { path = "../myco" }
 
 [dev-dependencies]
-env_logger = "0.8.2"
+env_logger = "0.8.3"
 myco-smol-server = { path = "../smol-server" }
