--- a/smol-server/Cargo.toml
+++ b/smol-server/Cargo.toml
@@ -11,3 +11,6 @@ smol = "1.2.5"
 myco-http = { path = "../http" }
 log = "0.4.13"
 myco-server-common = { path = "../server-common" }
+
+[dev-dependencies]
+env_logger = "0.8.3"
