--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -11,6 +11,7 @@ thiserror = "1.0.23"
 futures-lite = "1.11.3"
 async-lock = "2.3.0"
 memmem = "0.1.1"
+stopper = "0.1.0"
 
 [dependencies.http-types]
 git = "https://github.com/jbr/http-types"
