--- a/smol-server/Cargo.toml
+++ b/smol-server/Cargo.toml
@@ -11,6 +11,9 @@ smol = "1.2.5"
 myco-http = { path = "../http" }
 log = "0.4.13"
 myco-server-common = { path = "../server-common" }
+async-io = "1.3.1"
+signal-hook-async-std = "0.2.1"
+signal-hook = "0.3.4"
 
 [dev-dependencies]
 env_logger = "0.8.3"
