--- a/tokio-server/Cargo.toml
+++ b/tokio-server/Cargo.toml
@@ -11,6 +11,10 @@ log = "0.4.13"
 tokio = { version = "1.1.0", features = ["rt", "net", "rt-multi-thread"] }
 async-compat = "0.2.0"
 myco-server-common = { path = "../server-common" }
+signal-hook = "0.3.4"
+signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
+futures = "0.3.12"
+tokio-stream = { version = "0.1.3", features = ["net"] }
 
 [dev-dependencies]
 env_logger = "0.8.2"
