--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 routefinder = "0.2"
 myco = { path = "../myco" }
+log = "0.4.14"
 
 [dev-dependencies]
 env_logger = "0.8.3"
