--- a/smol-server/Cargo.toml
+++ b/smol-server/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2018"
 [dependencies]
 async-net = "1.5.0"
 myco = { path = "../myco" }
-smol = "1.2.5"
 myco-http = { path = "../http" }
 log = "0.4.13"
 myco-server-common = { path = "../server-common" }
 async-io = "1.3.1"
+futures-lite = "1.11.3"
+async-global-executor = "2.0.2"
 
 [target.'cfg(unix)'.dependencies]
 signal-hook-async-std = "0.2.1"
