--- a/async-std-server/Cargo.toml
+++ b/async-std-server/Cargo.toml
@@ -10,6 +10,8 @@ myco = { path = "../myco" }
 async-std = "1.9.0"
 myco-http = { path = "../http" }
 myco-server-common = { path = "../server-common" }
+
+[target.'cfg(unix)'.dependencies]
 signal-hook-async-std = "0.2.1"
 signal-hook = "0.3.4"
 
