--- a/smol-server/Cargo.toml
+++ b/smol-server/Cargo.toml
@@ -12,6 +12,8 @@ myco-http = { path = "../http" }
 log = "0.4.13"
 myco-server-common = { path = "../server-common" }
 async-io = "1.3.1"
+
+[target.'cfg(unix)'.dependencies]
 signal-hook-async-std = "0.2.1"
 signal-hook = "0.3.4"
 
