--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -7,7 +7,13 @@ edition = "2018"
 [dependencies]
 myco = { path = "../myco" }
 url = "2.2.0"
-async-h1 = "2.3.1"
-async-net = "1.5.0"
 log = "0.4.14"
-http-types = "2.10.0"
+myco-http = { path = "../http" }
+myco-client = { path = "../client" }
+async-net = "1.5.0"
+size = "0.1.2"
+full-duplex-async-copy = "0.1.0"
+
+[dev-dependencies]
+myco-smol-server = { path = "../smol-server" }
+env_logger = "0.8.3"
