--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -19,6 +19,7 @@ async-tls = "0.11.0"
 rustls = "0.19.0"
 webpki-roots = "0.21.0"
 rustls-native-certs = "0.5.0"
+encoding_rs = "0.8.28"
 
 [dev-dependencies]
 async-global-executor = "2.0.2"
