--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -11,6 +11,7 @@ thiserror = "1.0.23"
 futures-lite = "1.11.3"
 memmem = "0.1.1"
 stopper = "0.1.0"
+encoding_rs = "0.8.28"
 
 [dependencies.http-types]
 git = "https://github.com/jbr/http-types"
@@ -22,6 +23,7 @@ async-net = "1.5.0"
 env_logger = "0.8.2"
 smol = "1.2.5"
 async-compat = "0.2.0"
+async-io = "1.3.1"
 
 [dev-dependencies.tokio]
 version = "1.1.0"
