--- a/websockets/Cargo.toml
+++ b/websockets/Cargo.toml
@@ -15,6 +15,7 @@ serde = "1.0.120"
 serde_json = "1.0.61"
 sha-1 = "0.9.2"
 log = "0.4.13"
+stopper = "0.2.0"
 
 [dev-dependencies]
 myco-smol-server = { path = "../smol-server/" }
