docs and some reorganization

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,8 +8,9 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 
 [[bin]]
-name = "myco"
+name = "myco-cli"
 path = "src/main.rs"
+doc = false
 
 [dependencies]
 env_logger = "0.8.3"
