--- a/server-common/Cargo.toml
+++ b/server-common/Cargo.toml
@@ -13,3 +13,7 @@ myco-tls-common = { path = "../tls-common/" }
 async-channel = "1.5.1"
 pin-project-lite = "0.2.4"
 atomic-waker = "1.0.0"
+
+[dev-dependencies]
+async-io = "1.3.1"
+myco-testing = { path = "../testing" }
