--- a/trillium/Cargo.toml
+++ b/trillium/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "trillium"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "a modular toolkit for building async web apps"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 async-trait = "0.1.42"
