--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -2,6 +2,13 @@
 name = "trillium-http"
 version = "0.0.1"
 edition = "2018"
+authors = ["Jacob Rothstein <hi@jbr.me>"]
+description = "the http implementation for the trillium toolkit"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "README.md"
+keywords = ["trillium", "http", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 httparse = "1.3.4"
@@ -12,11 +19,7 @@ futures-lite = "1.11.3"
 memmem = "0.1.1"
 stopper = "0.2.0"
 encoding_rs = "0.8.28"
-
-[dependencies.http-types]
-git = "https://github.com/jbr/http-types"
-branch = "trillium"
-default-features = false
+http-types = { version = "0.0.1", default-features = false, package = "trillium-http-types" }
 
 [dev-dependencies]
 async-net = "1.5.0"
