--- a/aws-lambda/Cargo.toml
+++ b/aws-lambda/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 trillium = { path = "../trillium" }
 log = "0.4.13"
 tokio = { version = "1.1.0", features = ["rt", "net", "rt-multi-thread"] }
-trillium-http = { path = "../http" }
+trillium-http = { path = "../http", version = "0.0.1" }
 futures-lite = "1.11.3"
 serde_json = "1.0.61"
 serde = "1.0.123"
