--- a/trillium/Cargo.toml
+++ b/trillium/Cargo.toml
@@ -15,3 +15,6 @@ async-trait = "0.1.42"
 futures-lite = "1.11.3"
 log = "0.4.13"
 trillium-http = { path = "../http", version = "0.0.1" }
+
+[dev-dependencies]
+trillium-logger = { path = "../logger" }
