--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -10,6 +10,9 @@ readme = "README.md"
 keywords = ["trillium", "http", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
+[features]
+unstable = []
+
 [dependencies]
 httparse = "1.3.4"
 log = "0.4.13"
@@ -27,6 +30,7 @@ env_logger = "0.8.2"
 smol = "1.2.5"
 async-compat = "0.2.0"
 async-io = "1.3.1"
+trillium-client = { path = "../client" }
 
 [dev-dependencies.tokio]
 version = "1.1.0"
