I think the trillium crate is fully documented now

--- a/trillium/Cargo.toml
+++ b/trillium/Cargo.toml
@@ -19,3 +19,4 @@ trillium-http = { path = "../http", version = "0.0.1" }
 [dev-dependencies]
 trillium-logger = { path = "../logger" }
 trillium-testing = { path = "../testing" }
+async-net = "1.6.0"
