--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -31,6 +31,7 @@ smol = "1.2.5"
 async-compat = "0.2.0"
 async-io = "1.3.1"
 trillium-client = { path = "../client" }
+trillium-testing = { path = "../testing" }
 
 [dev-dependencies.tokio]
 version = "1.1.0"
