--- a/websockets/Cargo.toml
+++ b/websockets/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0.61"
 sha-1 = "0.9.2"
 log = "0.4.13"
 stopper = "0.2.0"
+trillium-http = { path = "../http" }
 
 [dev-dependencies]
 trillium-smol-server = { path = "../smol-server/" }
