--- a/async-std-server/Cargo.toml
+++ b/async-std-server/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 
 [dependencies]
-log = "0.4.13"
+log = "0.4.14"
 trillium = { path = "../trillium" }
 async-std = "1.9.0"
 trillium-http = { path = "../http" }
@@ -13,8 +13,8 @@ trillium-server-common = { path = "../server-common" }
 
 [target.'cfg(unix)'.dependencies]
 signal-hook-async-std = "0.2.1"
-signal-hook = "0.3.4"
+signal-hook = "0.3.8"
 
 [dev-dependencies]
 env_logger = "0.8.3"
-async-std = { version = "*", features = ["attributes"] }
+async-std = { version = "1.9.0", features = ["attributes"] }
