--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -32,6 +32,7 @@ async-compat = "0.2.1"
 async-io = "1.4.1"
 trillium-client = { path = "../client" }
 trillium-testing = { path = "../testing" }
+portpicker = "0.1.0"
 
 [dev-dependencies.tokio]
 version = "1.5.0"
