--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,16 @@ jobs:
       with:
         toolchain: ${{ matrix.rust }}
         override: true
+    - uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
     - name: tests
       uses: actions-rs/cargo@v1
       with:
@@ -42,8 +52,13 @@ jobs:
         components: rustfmt, clippy
         override: true
 
-    - name: clippy
-      run: cargo clippy --tests --examples # -- -D warnings
+    - uses: actions-rs/clippy-check@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        args: --all-features
+
+    # - name: clippy
+    #   run: cargo clippy --tests --examples # -- -D warnings
         
     - name: fmt
       run: cargo fmt --all -- --check
