--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -12,3 +12,4 @@ log = "0.4.14"
 [dev-dependencies]
 env_logger = "0.8.3"
 trillium-smol-server = { path = "../smol-server" }
+trillium-logger = { path = "../logger" }
