--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -13,3 +13,4 @@ log = "0.4.14"
 env_logger = "0.8.3"
 trillium-smol-server = { path = "../smol-server" }
 trillium-logger = { path = "../logger" }
+trillium-testing = { path = "../testing" }
