--- a/websockets/Cargo.toml
+++ b/websockets/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 
+[features]
+json = ["serde_json"]
+
 [dependencies]
 async-dup = "1.2.2"
 async-tungstenite = "0.13.1"
@@ -12,7 +15,7 @@ futures-util = "0.3.14"
 trillium = { path = "../trillium" }
 pin-project = "1.0.7"
 serde = "1.0.125"
-serde_json = "1.0.64"
+serde_json = { version = "1.0.64", optional = true }
 sha-1 = "0.9.5"
 log = "0.4.14"
 stopper = "0.2.0"
@@ -21,3 +24,7 @@ trillium-http = { path = "../http" }
 [dev-dependencies]
 trillium-smol-server = { path = "../smol-server/" }
 env_logger = "0.8.3"
+trillium-testing = { path = "../testing" }
+async-global-executor = "2.0.2"
+portpicker = "0.1.0"
+async-net = "1.6.0"
