--- a/handlebars/Cargo.toml
+++ b/handlebars/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 trillium = { path = "../trillium" }
 glob = "0.3.0"
-serde = "1.0.125"
+serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
 log = "0.4.14"
 
