--- a/handlebars/Cargo.toml
+++ b/handlebars/Cargo.toml
@@ -7,13 +7,10 @@ edition = "2018"
 [dependencies]
 trillium = { path = "../trillium" }
 glob = "0.3.0"
-serde = { version = "1.0.125", features = ["derive"] }
+serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 log = "0.4.14"
-
-[dependencies.handlebars]
-version = "3.5.5"
-features = ["dir_source"]
+handlebars = { version = "3.5.5", features = ["dir_source"] }
 
 [dev-dependencies]
 trillium-smol-server = { path = "../smol-server" }
