--- a/tera/Cargo.toml
+++ b/tera/Cargo.toml
@@ -9,6 +9,9 @@ trillium = { path = "../trillium" }
 mime-db = "1.3.0"
 tera = "1.10.0"
 serde = "1.0.126"
+log = "0.4.14"
 
 [dev-dependencies]
 trillium-smol-server = { path = "../smol-server" }
+trillium-testing = { path = "../testing" }
+env_logger = "0.8.3"
