--- a/askama/Cargo.toml
+++ b/askama/Cargo.toml
@@ -11,3 +11,4 @@ mime-db = "1.3.0"
 
 [dev-dependencies]
 trillium-smol-server = { path = "../smol-server" }
+trillium-testing = { path = "../testing" }
