--- a/static-compiled/Cargo.toml
+++ b/static-compiled/Cargo.toml
@@ -15,3 +15,4 @@ log = "0.4.14"
 [dev-dependencies]
 trillium-smol-server = { path = "../smol-server" }
 env_logger = "0.8.3"
+trillium-testing = { path = "../testing" }
