--- a/cookies/Cargo.toml
+++ b/cookies/Cargo.toml
@@ -15,3 +15,4 @@ features = ["percent-encode", "secure"]
 [dev-dependencies]
 env_logger = "0.8.3"
 trillium-smol-server = { path = "../smol-server" }
+trillium-testing = { path = "../testing" }
