--- a/static/Cargo.toml
+++ b/static/Cargo.toml
@@ -10,6 +10,7 @@ trillium = { path = "../trillium" }
 mime-db = "1.3.0"
 futures-lite = "1.11.3"
 log = "0.4.14"
+relative-path = "1.4.0"
 
 [dev-dependencies]
 trillium-smol-server = { path = "../smol-server" }
