--- a/tokio-server/Cargo.toml
+++ b/tokio-server/Cargo.toml
@@ -20,3 +20,4 @@ signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
 
 [dev-dependencies]
 env_logger = "0.8.3"
+tokio = { version = "1.6.0", features = ["full"] }
