--- a/cookies/Cargo.toml
+++ b/cookies/Cargo.toml
@@ -14,5 +14,5 @@ features = ["percent-encode", "secure"]
 
 [dev-dependencies]
 env_logger = "0.8.3"
-trillium-smol-server = { path = "../smol-server" }
+trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
