--- a/tera/Cargo.toml
+++ b/tera/Cargo.toml
@@ -12,6 +12,6 @@ serde = "1.0.126"
 log = "0.4.14"
 
 [dev-dependencies]
-trillium-smol-server = { path = "../smol-server" }
+trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
 env_logger = "0.8.3"
