--- a/askama/Cargo.toml
+++ b/askama/Cargo.toml
@@ -10,5 +10,5 @@ askama = "0.10.5"
 mime-db = "1.3.0"
 
 [dev-dependencies]
-trillium-smol-server = { path = "../smol-server" }
+trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
