--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,12 +14,8 @@ futures-lite = "1.11.3"
 httparse = "1.4.1"
 memmem = "0.1.1"
 size = "0.1.2"
-async-native-tls = "0.3.3"
-async-tls = "0.11.0"
-webpki-roots = "0.21"
-rustls = "0.19.1"
-rustls-native-certs = "0.5.0"
 encoding_rs = "0.8.28"
+trillium-tls-common = { path = "../tls-common" }
 
 [dev-dependencies]
 async-global-executor = "2.0.2"
@@ -27,3 +23,5 @@ env_logger = "0.8.3"
 futures-util = "0.3.15"
 async-io = "1.4.1"
 fastrand = "1.4.1"
+trillium-rustls = { path = "../rustls" }
+trillium-smol = { path = "../smol/" }
