--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -12,9 +12,10 @@ trillium-logger = { path = "../logger" }
 trillium-cookies = { path = "../cookies" }
 trillium-sessions = { path = "../sessions" }
 trillium-websockets = { path = "../websockets" }
-trillium-smol-server = { path = "../smol-server" }
+trillium-smol = { path = "../smol" }
 trillium-askama = { path = "../askama" }
 futures-lite = "1.11.3"
 askama = "0.10.5"
 trillium-static-compiled = { path = "../static-compiled/" }
 trillium-proxy = { path = "../proxy" }
+trillium-rustls = { path = "../rustls" }
