--- a/logger/Cargo.toml
+++ b/logger/Cargo.toml
@@ -12,4 +12,4 @@ size = "0.1.2"
 
 [dev-dependencies]
 env_logger = "0.8.3"
-trillium-smol-server = { path = "../smol-server" }
+trillium-smol = { path = "../smol" }
