--- a/native-tls/Cargo.toml
+++ b/native-tls/Cargo.toml
@@ -11,5 +11,5 @@ native-tls = "0.2.7"
 
 [dev-dependencies]
 env_logger = "0.8.3"
-trillium-smol-server = { path = "../smol-server" }
+trillium-smol = { path = "../smol" }
 trillium = { path = "../trillium" }
