--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -15,6 +15,6 @@ size = "0.1.2"
 full-duplex-async-copy = "0.1.0"
 
 [dev-dependencies]
-trillium-smol-server = { path = "../smol-server" }
+trillium-smol = { path = "../smol" }
 env_logger = "0.8.3"
 trillium-logger = { path = "../logger" }
