--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -11,6 +11,6 @@ log = "0.4.14"
 
 [dev-dependencies]
 env_logger = "0.8.3"
-trillium-smol-server = { path = "../smol-server" }
+trillium-smol = { path = "../smol" }
 trillium-logger = { path = "../logger" }
 trillium-testing = { path = "../testing" }
