--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -5,12 +5,14 @@ authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 
 [dependencies]
+async-rustls = "0.2.0"
 log = "0.4.14"
 rustls = "0.19.1"
-async-tls = "0.11.0"
+rustls-native-certs = "0.5.0"
 trillium-tls-common = { path = "../tls-common" }
+webpki-roots = "0.21"
 
 [dev-dependencies]
 trillium = { path = "../trillium" }
-trillium-smol-server = { path = "../smol-server" }
+trillium-smol = { path = "../smol" }
 env_logger = "0.8.3"
