--- a/static-compiled/Cargo.toml
+++ b/static-compiled/Cargo.toml
@@ -13,6 +13,6 @@ mime-db = "1.3.0"
 log = "0.4.14"
 
 [dev-dependencies]
-trillium-smol-server = { path = "../smol-server" }
+trillium-smol = { path = "../smol" }
 env_logger = "0.8.3"
 trillium-testing = { path = "../testing" }
