--- a/static/Cargo.toml
+++ b/static/Cargo.toml
@@ -13,5 +13,5 @@ log = "0.4.14"
 relative-path = "1.4.0"
 
 [dev-dependencies]
-trillium-smol-server = { path = "../smol-server" }
+trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
