--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -1,22 +1,23 @@
 [package]
-name = "trillium-smol-server"
+name = "trillium-tokio"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 
 [dependencies]
-async-net = "1.6.0"
 trillium = { path = "../trillium" }
 trillium-http = { path = "../http" }
 log = "0.4.14"
+tokio = { version = "1.6.1", features = ["rt", "net", "rt-multi-thread"] }
+async-compat = "0.2.1"
 trillium-server-common = { path = "../server-common" }
-async-io = "1.4.1"
-futures-lite = "1.11.3"
-async-global-executor = "2.0.2"
+futures = "0.3.15"
+tokio-stream = { version = "0.1.6", features = ["net"] }
 
 [target.'cfg(unix)'.dependencies]
-signal-hook-async-std = "0.2.1"
 signal-hook = "0.3.8"
+signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
 
 [dev-dependencies]
 env_logger = "0.8.3"
+tokio = { version = "1.6.1", features = ["full"] }
