--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -19,3 +19,4 @@ askama = "0.10.5"
 trillium-static-compiled = { path = "../static-compiled/" }
 trillium-proxy = { path = "../proxy" }
 trillium-rustls = { path = "../rustls" }
+log = "0.4.14"
