document and tidy client
importantly, finally figured out how to do async-drop for auto connection recycling

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -25,3 +25,4 @@ async-io = "1.4.1"
 fastrand = "1.4.1"
 trillium-rustls = { path = "../rustls" }
 trillium-smol = { path = "../smol/" }
+trillium-testing = { path = "../testing" }
