--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -10,3 +10,7 @@ trillium-http = { path = "../http" }
 futures-lite = "1.11.3"
 trillium-server-common = { path = "../server-common" }
 async-dup = "1.2.2"
+portpicker = "0.1.0"
+async-global-executor = "2.0.2"
+trillium-smol = { path = "../smol" }
+async-io = "1.4.1"
