--- a/server-common/Cargo.toml
+++ b/server-common/Cargo.toml
@@ -16,4 +16,5 @@ atomic-waker = "1.0.0"
 
 [dev-dependencies]
 async-io = "1.4.1"
+trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
