begin adding tests to the example app
and introduce a new style of testing

--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -20,3 +20,6 @@ trillium-static-compiled = { path = "../static-compiled/" }
 trillium-proxy = { path = "../proxy" }
 trillium-rustls = { path = "../rustls" }
 log = "0.4.14"
+
+[dev-dependencies]
+trillium-testing = { path = "../testing" }
