correctly exclude trillium-cli
exclude basic-auth and sort the workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,16 @@ members = [
   "async-std",
   "aws-lambda",
   "aws-lambda-example",
-  "basic-auth",
-  "cookies",
   "cli",
+  "client",
+  "cookies",
   "example",
   "handlebars",
+  "html-rewriter",
   "http",
   "logger",
-  "trillium",
   "native-tls",
+  "proxy",
   "router",
   "rustls",
   "server-common",
@@ -25,9 +26,7 @@ members = [
   "testing",
   "tls-common",
   "tokio",
+  "trillium",
   "websockets",
-  "proxy",
-  "client",
-  "html-rewriter",
 ]
-exclude = ["controllers"]
+exclude = ["controllers", "basic-auth"]
