--- a/smol/Cargo.toml
+++ b/smol/Cargo.toml
@@ -20,3 +20,5 @@ signal-hook = "0.3.8"
 
 [dev-dependencies]
 env_logger = "0.8.3"
+trillium-client = { path = "../client" }
+trillium-testing = { path = "../testing" }
