--- a/async-std/Cargo.toml
+++ b/async-std/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2018"
 [dependencies]
 log = "0.4.14"
 trillium = { path = "../trillium" }
-async-std = "1.9.0"
+async-std = { version = "1.9.0", package = "async-std" }
 trillium-http = { path = "../http" }
 trillium-server-common = { path = "../server-common" }
 
 [target.'cfg(unix)'.dependencies]
 signal-hook-async-std = "0.2.1"
-signal-hook = "0.3.8"
+signal-hook = "0.3.9"
 
 [dev-dependencies]
 env_logger = "0.8.3"
-async-std = { version = "1.9.0", features = ["attributes"] }
+async-std = { version = "1.9.0", features = ["attributes"], package = "async-std" }
