--- a/aws-lambda/Cargo.toml
+++ b/aws-lambda/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 [dependencies]
 trillium = { path = "../trillium" }
 log = "0.4.14"
-tokio = { version = "1.6.1", features = ["rt", "net", "rt-multi-thread"] }
+tokio = { version = "1.6.1", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
 trillium-http = { path = "../http", version = "0.0.1" }
-futures-lite = "1.11.3"
+futures-lite = "1.12.0"
 serde_json = "1.0.64"
 serde = "1.0.126"
 serde_derive = "1.0.126"
