--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -18,7 +18,7 @@ httparse = "1.4.1"
 log = "0.4.14"
 pin-project = "1.0.7"
 thiserror = "1.0.25"
-futures-lite = "1.11.3"
+futures-lite = "1.12.0"
 memmem = "0.1.1"
 stopper = "0.2.0"
 encoding_rs = "0.8.28"
@@ -37,3 +37,4 @@ trillium-smol = { path = "../smol" }
 [dev-dependencies.tokio]
 version = "1.6.1"
 features = ["rt", "net", "rt-multi-thread", "macros"]
+package = "tokio"
