--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -8,16 +8,16 @@ edition = "2018"
 trillium = { path = "../trillium" }
 trillium-http = { path = "../http" }
 log = "0.4.14"
-tokio = { version = "1.6.1", features = ["rt", "net", "rt-multi-thread"] }
+tokio = { version = "1.6.1", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
 async-compat = "0.2.1"
 trillium-server-common = { path = "../server-common" }
 futures = "0.3.15"
 tokio-stream = { version = "0.1.6", features = ["net"] }
 
 [target.'cfg(unix)'.dependencies]
-signal-hook = "0.3.8"
+signal-hook = "0.3.9"
 signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
 
 [dev-dependencies]
 env_logger = "0.8.3"
-tokio = { version = "1.6.1", features = ["full"] }
+tokio = { version = "1.6.1", features = ["full"], package = "tokio" }
