--- a/aws-lambda/Cargo.toml
+++ b/aws-lambda/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 trillium = { path = "../trillium" }
 log = "0.4.14"
 tokio = { version = "1.6.1", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
-trillium-http = { path = "../http", version = "0.0.1" }
+trillium-http = { path = "../http", version = "^0.1.0"}
 futures-lite = "1.12.0"
 serde_json = "1.0.64"
 serde = "1.0.126"
