--- a/trillium/Cargo.toml
+++ b/trillium/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["web-programming::http-server", "web-programming"]
 async-trait = "0.1.50"
 futures-lite = "1.12.0"
 log = "0.4.14"
-trillium-http = { path = "../http", version = "0.0.1" }
+trillium-http = { path = "../http", version = "^0.1.0"}
 
 [dev-dependencies]
 trillium-logger = { path = "../logger" }
