--- a/server-common/Cargo.toml
+++ b/server-common/Cargo.toml
@@ -3,18 +3,23 @@ name = "trillium-server-common"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "server utilities for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
+async-channel = "1.6.1"
+atomic-waker = "1.0.0"
+futures-lite = "1.12.0"
+log = "0.4.14"
+pin-project-lite = "0.2.6"
 trillium = { path = "../trillium" }
 trillium-http = { path = "../http" }
-log = "0.4.14"
-futures-lite = "1.12.0"
 trillium-tls-common = { path = "../tls-common/" }
-async-channel = "1.6.1"
-pin-project-lite = "0.2.6"
-atomic-waker = "1.0.0"
 
 [dev-dependencies]
-async-io = "1.4.1"
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
