--- a/smol/Cargo.toml
+++ b/smol/Cargo.toml
@@ -3,6 +3,12 @@ name = "trillium-smol"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "smol runtime adapter for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 async-net = "1.6.0"
