--- a/trillium/Cargo.toml
+++ b/trillium/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "a modular toolkit for building async web apps"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/trillium-rs/trillium"
-readme = "README.md"
+readme = "../README.md"
 keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
@@ -14,10 +14,8 @@ categories = ["web-programming::http-server", "web-programming"]
 async-trait = "0.1.50"
 futures-lite = "1.12.0"
 log = "0.4.14"
-trillium-http = { path = "../http", version = "^0.1.0"}
+trillium-http = { path = "../http", version = "^0.1.0" }
 
 [dev-dependencies]
-trillium-logger = { path = "../logger" }
-trillium-testing = { path = "../testing" }
-async-net = "1.6.0"
 trillium-smol = { path = "../smol" }
+trillium-testing = { path = "../testing" }
