--- a/server-common/Cargo.toml
+++ b/server-common/Cargo.toml
@@ -16,9 +16,9 @@ atomic-waker = "1.0.0"
 futures-lite = "1.12.0"
 log = "0.4.14"
 pin-project-lite = "0.2.6"
-trillium = { path = "../trillium" }
-trillium-http = { path = "../http" }
-trillium-tls-common = { path = "../tls-common/" }
+trillium = { path = "../trillium", version = "^0.1.0" }
+trillium-http = { path = "../http", version = "^0.1.0" }
+trillium-tls-common = { path = "../tls-common/", version = "^0.1.0" }
 
 [dev-dependencies]
 trillium-smol = { path = "../smol" }
