--- a/smol/Cargo.toml
+++ b/smol/Cargo.toml
@@ -16,9 +16,9 @@ async-io = "1.4.1"
 async-net = "1.6.0"
 futures-lite = "1.12.0"
 log = "0.4.14"
-trillium = { path = "../trillium" }
-trillium-http = { path = "../http" }
-trillium-server-common = { path = "../server-common" }
+trillium = { path = "../trillium", version = "^0.1.0" }
+trillium-http = { path = "../http", version = "^0.1.0" }
+trillium-server-common = { path = "../server-common", version = "^0.1.0" }
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.9"
