--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -3,6 +3,12 @@ name = "trillium-testing"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "testing library for trillium applications"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "testing"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 async-dup = "1.2.2"
@@ -10,10 +16,10 @@ async-global-executor = "2.0.2"
 async-io = "1.4.1"
 futures-lite = "1.12.0"
 portpicker = "0.1.0"
-trillium = { path = "../trillium" }
-trillium-http = { path = "../http" }
-trillium-server-common = { path = "../server-common" }
-trillium-smol = { path = "../smol" }
+trillium = { path = "../trillium", version = "^0.1.0" }
+trillium-http = { path = "../http", version = "^0.1.0" }
+trillium-server-common = { path = "../server-common", version = "^0.1.0" }
+trillium-smol = { path = "../smol", version = "^0.1.0" }
 
 [dev-dependencies]
 trillium-logger = { path = "../logger" }
