--- a/logger/Cargo.toml
+++ b/logger/Cargo.toml
@@ -1,14 +1,19 @@
 [package]
 name = "trillium-logger"
-version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "logger for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-trillium = { path = "../trillium" }
-log = "0.4.14"
 colored = "2.0.0"
+log = "0.4.14"
 size = "0.1.2"
+trillium = { path = "../trillium", version = "^0.1.0" }
 
 [dev-dependencies]
 env_logger = "0.8.3"
