--- a/logger/Cargo.toml
+++ b/logger/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "trillium-logger"
+version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 description = "logger for trillium.rs"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/trillium-rs/trillium"
 readme = "../README.md"
-keywords = ["trillium", "framework", "async"]
+keywords = ["trillium", "framework", "async", "logging"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
