--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -3,14 +3,20 @@ name = "trillium-router"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "router for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async", "router"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-routefinder = "0.3.0"
-trillium = { path = "../trillium" }
 log = "0.4.14"
+routefinder = "0.3.0"
+trillium = { path = "../trillium", version = "^0.1.0" }
 
 [dev-dependencies]
 env_logger = "0.8.3"
-trillium-smol = { path = "../smol" }
 trillium-logger = { path = "../logger" }
+trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
