--- a/askama/Cargo.toml
+++ b/askama/Cargo.toml
@@ -3,11 +3,17 @@ name = "trillium-askama"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "askama templates for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-trillium = { path = "../trillium" }
 askama = "0.10.5"
 mime-db = "1.4.0"
+trillium = { path = "../trillium", version = "^0.1.0" }
 
 [dev-dependencies]
 trillium-smol = { path = "../smol" }
