--- a/async-std/Cargo.toml
+++ b/async-std/Cargo.toml
@@ -3,18 +3,24 @@ name = "trillium-async-std"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "async-std runtime adapter for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
+async-std = "1.9.0"
 log = "0.4.14"
-trillium = { path = "../trillium" }
-async-std = { version = "1.9.0", package = "async-std" }
-trillium-http = { path = "../http" }
-trillium-server-common = { path = "../server-common" }
+trillium = { path = "../trillium", version = "^0.1.0" }
+trillium-http = { path = "../http", version = "^0.1.0" }
+trillium-server-common = { path = "../server-common", version = "0.1.0" }
 
 [target.'cfg(unix)'.dependencies]
-signal-hook-async-std = "0.2.1"
 signal-hook = "0.3.9"
+signal-hook-async-std = "0.2.1"
 
 [dev-dependencies]
 env_logger = "0.8.3"
-async-std = { version = "1.9.0", features = ["attributes"], package = "async-std" }
+async-std = { version = "1.9.0", features = ["attributes"] }
