--- a/aws-lambda/Cargo.toml
+++ b/aws-lambda/Cargo.toml
@@ -3,18 +3,24 @@ name = "trillium-aws-lambda"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "aws lambda adapter for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-trillium = { path = "../trillium" }
-log = "0.4.14"
-tokio = { version = "1.6.1", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
-trillium-http = { path = "../http", version = "^0.1.0"}
+base64 = "0.13.0"
 futures-lite = "1.12.0"
-serde_json = "1.0.64"
+lamedh_runtime = "0.3.0"
+log = "0.4.14"
 serde = "1.0.126"
 serde_derive = "1.0.126"
-base64 = "0.13.0"
-lamedh_runtime = "0.3.0"
+serde_json = "1.0.64"
+tokio = { version = "1.6.1", features = ["rt", "net", "rt-multi-thread"] }
+trillium = { path = "../trillium", version = "^0.1.0" }
+trillium-http = { path = "../http", version = "^0.1.0" }
 
 [dependencies.http-types]
 version = "0.0.1"
