--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -3,24 +3,34 @@ name = "trillium-client"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "http/1.x client for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming", "web-programming::http-client"]
 
 [dependencies]
-trillium-http = { path = "../http", features = ["unstable"], version = "^0.1.0"}
-trillium = { path = "../trillium" }
-log = "0.4.14"
 async-net = "1.6.0"
-url = "2.2.2"
+encoding_rs = "0.8.28"
 futures-lite = "1.12.0"
 httparse = "1.4.1"
+log = "0.4.14"
 memmem = "0.1.1"
 size = "0.1.2"
-encoding_rs = "0.8.28"
-trillium-tls-common = { path = "../tls-common" }
+trillium = { path = "../trillium", version = "^0.1.0" }
+trillium-tls-common = { path = "../tls-common", version = "^0.1.0" }
+url = "2.2.2"
+
+[dependencies.trillium-http]
+path = "../http"
+features = ["unstable"]
+version = "^0.1.0"
 
 [dev-dependencies]
 async-global-executor = "2.0.2"
-env_logger = "0.8.3"
 async-io = "1.4.1"
+env_logger = "0.8.3"
 fastrand = "1.4.1"
 trillium-rustls = { path = "../rustls" }
 trillium-smol = { path = "../smol/" }
