--- a/cookies/Cargo.toml
+++ b/cookies/Cargo.toml
@@ -1,12 +1,18 @@
 [package]
-name = "trillium-cookies"
 version = "0.1.0"
+name = "trillium-cookies"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "cookies handler for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 log = "0.4.14"
-trillium = { path = "../trillium" }
+trillium = { path = "../trillium", version = "^0.1.0" }
 
 [dependencies.cookie]
 version = "0.15.0"
