--- a/handlebars/Cargo.toml
+++ b/handlebars/Cargo.toml
@@ -3,16 +3,22 @@ name = "trillium-handlebars"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "handlebars templates for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-trillium = { path = "../trillium" }
 glob = "0.3.0"
+handlebars = { version = "4.0.0", features = ["dir_source"] }
+log = "0.4.14"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
-log = "0.4.14"
-handlebars = { version = "4.0.0", features = ["dir_source"] }
+trillium = { path = "../trillium", version = "^0.1.0" }
 
 [dev-dependencies]
-trillium-smol = { path = "../smol" }
 env_logger = "0.8.3"
+trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
