--- a/native-tls/Cargo.toml
+++ b/native-tls/Cargo.toml
@@ -3,13 +3,19 @@ name = "trillium-native-tls"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "native-tls adapter for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 async-native-tls = "0.3.3"
-trillium-tls-common = { path = "../tls-common" }
 native-tls = "0.2.7"
+trillium-tls-common = { path = "../tls-common" }
 
 [dev-dependencies]
 env_logger = "0.8.3"
-trillium-smol = { path = "../smol" }
 trillium = { path = "../trillium" }
+trillium-smol = { path = "../smol" }
