--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -3,16 +3,22 @@ name = "trillium-rustls"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "rustls adapter for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 async-rustls = "0.2.0"
 log = "0.4.14"
 rustls = "0.19.1"
 rustls-native-certs = "0.5.0"
-trillium-tls-common = { path = "../tls-common" }
+trillium-tls-common = { path = "../tls-common", version = "^0.1.0" }
 webpki-roots = "0.21"
 
 [dev-dependencies]
+env_logger = "0.8.3"
 trillium = { path = "../trillium" }
 trillium-smol = { path = "../smol" }
-env_logger = "0.8.3"
