--- a/static-compiled/Cargo.toml
+++ b/static-compiled/Cargo.toml
@@ -3,16 +3,20 @@ name = "trillium-static-compiled"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "compile-time static assets for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 include_dir = "0.6.0"
-trillium = { path = "../trillium" }
-mime-db = "1.4.0"
 log = "0.4.14"
+mime-db = "1.4.0"
+trillium = { path = "../trillium", version = "^0.1.0" }
 
 [dev-dependencies]
-trillium-smol = { path = "../smol" }
 env_logger = "0.8.3"
+trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
