--- a/static/Cargo.toml
+++ b/static/Cargo.toml
@@ -3,14 +3,20 @@ name = "trillium-static"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "filesystem-backed static assets for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 async-fs = "1.5.0"
-trillium = { path = "../trillium" }
-mime-db = "1.4.0"
 futures-lite = "1.12.0"
 log = "0.4.14"
+mime-db = "1.4.0"
 relative-path = "1.4.0"
+trillium = { path = "../trillium", version = "^0.1.0" }
 
 [dev-dependencies]
 trillium-smol = { path = "../smol" }
