--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -3,16 +3,21 @@ name = "trillium-tokio"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
+description = "tokio runtime adapter for trillium.rs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
+async-compat = "0.2.1"
+log = "0.4.14"
+tokio = { version = "1.6.1", features = ["rt", "net", "rt-multi-thread"] }
+tokio-stream = { version = "0.1.6", features = ["net"] }
 trillium = { path = "../trillium" }
 trillium-http = { path = "../http" }
-log = "0.4.14"
-tokio = { version = "1.6.1", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
-async-compat = "0.2.1"
 trillium-server-common = { path = "../server-common" }
-futures = "0.3.15"
-tokio-stream = { version = "0.1.6", features = ["net"] }
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.9"
@@ -20,4 +25,4 @@ signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
 
 [dev-dependencies]
 env_logger = "0.8.3"
-tokio = { version = "1.6.1", features = ["full"], package = "tokio" }
+tokio = { version = "1.6.1", features = ["full"] }
