--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,4 +61,4 @@ jobs:
       run: cargo fmt --all -- --check
 
     - name: Docs
-      run: cargo doc --no-deps
+      run: cargo doc --no-deps --features smol
