--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["web-programming::http-server", "web-programming"]
 [dependencies]
 async-compat = "0.2.1"
 log = "0.4.14"
-tokio = { version = "1.6.1", features = ["rt", "net", "rt-multi-thread"] }
+tokio = { version = "1.7.1", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
 tokio-stream = { version = "0.1.6", features = ["net"] }
 trillium = { path = "../trillium", version = "^0.1.0" }
 trillium-http = { path = "../http", version = "^0.1.0" }
@@ -24,5 +24,5 @@ signal-hook = "0.3.9"
 signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
 
 [dev-dependencies]
-tokio = { version = "1.6.1", features = ["full"] }
+tokio = { version = "1.7.1", features = ["full"], package = "tokio" }
 env_logger = "0.8.4"
