--- a/html-rewriter/Cargo.toml
+++ b/html-rewriter/Cargo.toml
@@ -10,33 +10,16 @@ readme = "../README.md"
 keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
-[features]
-async-std = ["async_std_crate"]
-default = ["async-global-executor"]
-smol = ["async-global-executor"]
-tokio = ["tokio_crate"]
-
 [dependencies]
-async-global-executor = { version = "2.0.2", optional = true }
-cfg-if = "1.0.0"
+async-io = "1.4.1"
 futures-lite = "1.12.0"
-lol-async = "0.1.1"
+lol-async = "0.1.2"
 trillium = { path = "../trillium", version = "^0.1.0" }
 
-[dependencies.tokio_crate]
-version = "1.7.1"
-optional = true
-package = "tokio"
-features = ["rt"]
-
-[dependencies.async_std_crate]
-version = "1.9.0"
-optional = true
-package = "async-std"
-features = ["unstable"]
-
 [dev-dependencies]
+async-global-executor = "2.0.2"
 env_logger = "0.8.4"
+trillium-logger = { path = "../logger" }
 trillium-proxy = { path = "../proxy" }
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
