--- a/smol/Cargo.toml
+++ b/smol/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
+async-fs = "1.5.0"
 async-global-executor = "2.0.2"
 async-io = "1.4.1"
 async-net = "1.6.0"
@@ -27,4 +28,5 @@ signal-hook-async-std = "0.2.1"
 [dev-dependencies]
 env_logger = "0.8.4"
 trillium-client = { path = "../client" }
+trillium-logger = { path = "../logger" }
 trillium-testing = { path = "../testing" }
