(cargo-release) version 0.2.0

--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -32,5 +32,5 @@ tokio = { version = "1.8.1", features = ["full"], package = "tokio" }
 env_logger = "0.8.4"
 
 [dev-dependencies.trillium-testing]
-version = "0.1.1"
+version = "^0.2.0"
 path = "../testing"
